RESOLVED FIXED279019
WebCodecs PendingActivityCounter is no longer needed
https://bugs.webkit.org/show_bug.cgi?id=279019
Summary WebCodecs PendingActivityCounter is no longer needed
youenn fablet
Reported 2024-09-02 06:50:20 PDT
WebCodecs PendingActivityCounter is no longer needed, once we fix https://bugs.webkit.org/show_bug.cgi?id=278909
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-02 06:50:41 PDT
youenn fablet
Comment 2 2024-09-02 06:59:26 PDT
EWS
Comment 3 2024-09-05 05:28:51 PDT
Committed 283202@main (0068a4f1d7bd): <https://commits.webkit.org/283202@main> Reviewed commits have been landed. Closing PR #33032 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.